# ocamlunix

./: .build.yml  .gitignore  .ocamlformat  .travis.yml  GNUmakefile  README.md  build  default.nix  dune-project  flake.nix  ocamlunix.opam  release.nix
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ocaml.yml
01-generalities/echo/: Makefile  _tags  build  dune  echo.ml
02-files/commons/: .merlin  Makefile  _tags  build  commons.ml  commons.mli  dune  main.ml  myocamlbuild.ml  test.ml
02-files/copyrec/: .merlin  .ocp-indent  _tags  build  copyrec.ml  file_copy
02-files/file_copy/: Makefile  _tags  build  dune  ext_array.ml  ext_array.mli  file_copy.ml  file_copy.mli  main.ml
02-files/find/: .merlin  Makefile  _tags  build  dune  exercise1.ml  exercise2.ml  find.ml  findlib.ml  getcwd.ml
02-files/read_passwd/: Makefile  _tags  build  dune  read_passwd.ml
02-files/tail/: .merlin  Makefile  _tags  all_tests.ml  build  dune  lines_test.ml  main.ml  tail.ml  tail_test.ml  tests.ml
02-files/tar/: .merlin  _tags  build  misc  tar.ml  tarlib.ml  untar.ml
02-files/tar/src/: dune  readtar_v1.ml  readtar_v2.ml  tar.ml  tarlib.ml  untar.ml
03-processes/fork_search/: build  dune  fork_search.ml
03-processes/leave/: _tags  build  dune  leave.ml
03-processes/minishell/: build  dune  minishell.ml
04-signals/nohup/: build  dune  (+1 more)
diversions/: .merlin  _tags  all_tests.ml  build  circular_buffer.ml  circular_buffer.mli  circular_buffer_test.ml  common.ml  dune
misc/: .merlin  Makefile  _tags  build
scripts/: post-create.sh
(+143 files in other folders)
